--- a/contato.html
+++ b/contato.html
@@ -2,34 +2,35 @@
 <html lang="pt">
 <head>
 	<link rel="stylesheet" type="text/css" href="base.css">
-	<link rel="stylesheet" type="text/css" href="vertical.css">
-	<title>Acessibilidade e Inclus„o Digital - Contato</title>
+	<link rel="stylesheet" type="text/css" href="horizontal.css">
+	<title>REA - Tema: Trabalho</title>
 </head>
 <body>
-	<a class="skip-main" href="#content">Pular para o Conte˙do</a>
+	<a class="skip-main" href="#content">Ir para conte√∫do principal</a>
 	<a class="skip-main" href="#menu">Menu</a>
 	<nav id="menu" class="menu">
 		<div class="menu--title">
-			AID<span class="menu--title__light">.DAINF</span>
+			REA.<span class="menu--title__light">TEMA: Trabalho</span>
 		</div>
-		<a class="menu--item" href="sobre.html" title="Ir para a p·gina Sobre." >Sobre</a>
-		<a class="menu--item" href="index-vertical.html" title="Ir para a p·gina Exemplo com menu vertical." >Exemplo com menu vertical</a>
-		<a class="menu--item" href="index-horizontal.html" title="Ir para a p·gina Exemplo com menu horizontal." >Exemplo com menu horizontal</a>
-		<a class="menu--item menu--item__selected" href="contato.html" title="Ir para a p·gina Contato." >Contato</a>
+		<a class="menu--item menu--item__selected" href="contato.html" title="Ir para a p√°gina Contato.">Sobre</a>
+		<a class="menu--item" href="index.html" title="Pagina desta atividade.">Atividade</a>
 	</nav> <!-- Menu -->
 	<main id="content" class="content">
 		<h1 class="content--headertext">
 			Contato
 		</h1>
-		
-		<p class="content--text">Acesse o <a href="https://goo.gl/forms/BbiGmjuPygxCFSSq2" title="Ir para o formul·rio de contato">Formul·rio de contato (Google Forms)</a> e entre em contato com nossa equipe.</p>
-	
-
+		<div class="content--text">
+			Este material foi desenvolvido como parte do projeto realizado em conjunto com a disciplina <b>Acessibilidade e Inclus√£o Digital</b> da Universidade Tecnol√≥gica Federal do Paran√° (UTFPR), no segundo semestre de 2019. O projeto est√° sob coordena√ß√£o do prof. Leonelo Dell Anhol Almeida e a equipe editorial √© composta por: Ana Paula Retore, Bernardo Alves Villarinho Lima e PatrÔøΩcia da Silva Leite.<br><br>
+			A equipe proponente e realizador deste REA √© composta por: <i>Douglas Soares Vicente e William Fehrmann</i>.<br><br>
+			O objetivo do presente material √© <i>analisar a viabilidade e obter conhecimento pr√°tico no processo de adapta√ß√£o de atividades para vers√£o web compat√≠veis com aplicativos de intera√ß√£o indepedentes de recursos visuais</i> e foi planejado para atender, principalmente, mas n√£o exclusivamente, <i>pessoas cegas</i>. <br>
+			<!-- Uma vez que o projeto de extensÔøΩo tem como proposta atender demandas reais da comunidade, e este REA foi projetado com a participaÔøΩÔøΩo de pessoas externas ao projeto. Essa estratÔøΩgia foi adotada por ser considerada relevante, para a formaÔøΩÔøΩo profissional e cidadÔøΩ dos estudantes, reconhecer e envolver a comunidade nos projetos e nas propostas realizados na universidade. -->
+		</div>
 	</main> <!-- Content -->
 	<footer class="license-footer">
-		<img src="./img/CC_BY-SA_3.0.png" class="cc_license" alt="Creative Commons AtribuiÁ„o-Compartilha-Igual 4.0 Internacional">
+		<img src="./img/CC_BY-SA_3.0.png" class="cc_license" alt="Creative Commons Atribui√ß√£o-Compartilha-Igual 4.0 Internacional">
 		<br>
-		Este material deve ser distribuÌdo sob a licenÁa <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.pt_BR">Creative Commons AtribuiÁ„o-CompartilhaIgual 4.0 Internacional</a>
+		Este material deve ser distribu√≠do sob a licen√ßa <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.pt_BR">Creative Commons
+			Atribui√ß√£o-Compartilha-Igual 4.0 Internacional</a>
 	</footer>
 </body>
 </html>
