--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="menu--title">
 			REA.<span class="menu--title__light">TEMA: Trabalho</span>
 		</div>
-		<a class="menu--item" href="contato.html" title="Ir para a página Contato.">Contato</a>
+		<a class="menu--item" href="contato.html" title="Ir para a página Contato.">Sobre</a>
 		<a class="menu--item menu--item__selected" href="index-horizontal.html" title="Pagina desta atividade.">Atividade</a>
 	</nav> <!-- Menu -->
 	<main id="content" class="content">
