fix: codigo do audio 1

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 		var audioMarisa = document.getElementById("audio-marisa");
 
 		document.onkeyup = function (e) {
-			if (e.code == 'Digit1' && e.code == 'AltRight') {
+			if (e.code == 'Digit1') {
 				toggleAudioAndrei();
 			} else if (e.code == 'Digit2') {
 				toggleAudioEric();
