--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt">
 
 <head>
+	<meta charset="UTF-8">
 	<style>
 		.lower-alpha {
 			list-style-type: lower-alpha
@@ -39,32 +40,32 @@
 					<label for="audio-andrei">Andrei</label>
 					<button onclick="toggleAudioAndrei()" type="button">Executar/Pausar</button>
 					<audio id="audio-andrei">
-						<source src="src/audio/Andrei 8 - Trabalho.mp3" type="audio/mpeg" />
-						Seu navegador não suporta o recurso de áudio. Você pode acessar o áudio dentro da pasta da atividade.
+						<source src="src/audio/Andrei.mp3" type="audio/mpeg" />
+						<a href="src/audio/Andrei.mp3" taget=" _blank">Áudio 1</a>
 					</audio>
 				</li>
 				<li>
 					<label for="audio-eric">Eric</label>
 					<button onclick="toggleAudioEric()" type="button">Executar/Pausar</button>
 					<audio id="audio-eric">
-						<source src="src/audio/Eric 8.1 - Trabalho.mp3" type="audio/mpeg" />
-						Seu navegador não suporta o recurso de áudio. Você pode acessar o áudio dentro da pasta da atividade.
+						<source src="src/audio/Eric.mp3" type="audio/mpeg" />
+						<a href="src/audio/Eric.mp3" taget=" _blank">Áudio 2</a>
 					</audio>
 				</li>
 				<li>
 					<label for="audio-larissa">Larissa</label>
 					<button onclick="toggleAudioLarissa()" type="button">Executar/Pausar</button>
 					<audio id="audio-larissa">
-						<source src="src/audio/Larissa 8 - Trabalho.mp3" type="audio/mpeg" />
-						Seu navegador não suporta o recurso de áudio. Você pode acessar o áudio dentro da pasta da atividade.
+						<source src="src/audio/Larissa.mp3" type="audio/mpeg" />
+						<a href="src/audio/Larissa.mp3" taget=" _blank">Áudio 3</a>
 					</audio>
 				</li>
 				<li>
 					<label for="audio-marisa">Marisa</label>
 					<button onclick="toggleAudioMarisa()" type="button">Executar/Pausar</button>
 					<audio id="audio-marisa">
-						<source src="src/audio/Marisa 8 - Trabalho.mp3" type="audio/mpeg" />
-						Seu navegador não suporta o recurso de áudio. Você pode acessar o áudio dentro da pasta da atividade.
+						<source src="src/audio/Marisa.mp3" type="audio/mpeg" />
+						<a href="src/audio/Marisa.mp3" taget=" _blank">Áudio 4</a>
 					</audio>
 				</li>
 			</ol>
